some failures. updates to code

--- a/views/submitpeep.erb
+++ b/views/submitpeep.erb
@@ -1,5 +1,5 @@
 <form action='/peeps' method='post'>
   <label for "peep">Peep</label>
     <input type='text' name='peep' id='your peep'/>
-    <input type='submit' value='Submit'>
+    <input type='submit' value='Post your peep'>
 </form>
