--- a/views/submitpeep.erb
+++ b/views/submitpeep.erb
@@ -1,5 +1,7 @@
 <form action='/peeps' method='post'>
-  <label for "peep">Peep</label>
-    <input type='text' name='peep' id='your peep'/>
-    <input type='submit' value='Post your peep'>
+
+  <label for "peep">peep</label>
+    <input type='text' name='peep' id='peep'/>
+    <input type='submit' value='Post peep'>
+
 </form>
